Refactored StoryManager to load all comments at once. This fixes rendering hangups but delays loading significantly for comments with many threads. Additionally, added UI hints to show when things are loading (comments/articles). Other minor UI updates.

--- a/app/src/main/res/drawable/collapsed_comment_background.xml
+++ b/app/src/main/res/drawable/collapsed_comment_background.xml
@@ -8,5 +8,5 @@
         android:right="@dimen/collapsed_comment_counter_padding"
         android:top="@dimen/collapsed_comment_counter_padding"/>
     <solid
-        android:color="@color/colorPrimary"/>
+        android:color="?attr/colorPrimary"/>
 </shape>
