--- a/app/src/main/res/layouts/details/layout/comment_item.xml
+++ b/app/src/main/res/layouts/details/layout/comment_item.xml
@@ -3,19 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/story_item"
+    android:id="@+id/comment_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="?attr/rowBackgroundColor">
 
     <FrameLayout
         android:id="@+id/depth_marker"
         android:layout_width="@dimen/depth_marker_width"
         android:layout_height="0dp"
+        android:background="?attr/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/colorPrimary"
         tools:layout_marginLeft="0dp"
         tools:layout_marginStart="0dp"/>
 
@@ -26,7 +26,7 @@
         android:layout_marginLeft="@dimen/row_horizontal_padding"
         android:layout_marginStart="@dimen/row_horizontal_padding"
         android:paddingTop="@dimen/row_vertical_padding"
-        android:textColor="@color/text_low_priority"
+        android:textColor="?attr/rowTextColorSecondary"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@id/depth_marker"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
         android:layout_marginLeft="@dimen/row_horizontal_padding"
         android:layout_marginStart="@dimen/row_horizontal_padding"
         android:paddingTop="@dimen/row_vertical_padding"
-        android:textColor="@color/colorPrimary"
+        android:textColor="?attr/rowTextColorSecondary"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@id/author"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +53,7 @@
         android:layout_marginRight="@dimen/row_horizontal_padding"
         android:layout_marginTop="@dimen/row_vertical_padding"
         android:background="@drawable/collapsed_comment_background"
-        android:textColor="@color/white"
+        android:textColor="@color/collapsible_comment_counter_text_color"
         android:textSize="13sp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/author"
@@ -71,7 +71,7 @@
         android:paddingRight="@dimen/row_horizontal_padding"
         android:paddingStart="@dimen/row_horizontal_padding"
         android:paddingTop="@dimen/row_vertical_padding"
-        android:textColor="@color/text_high_priority"
+        android:textColor="?attr/rowTextColorPrimary"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@id/depth_marker"
         app:layout_constraintTop_toBottomOf="@+id/author"
@@ -83,7 +83,7 @@
         android:layout_height="@dimen/divider_size"
         android:layout_gravity="bottom"
         android:layout_marginTop="@dimen/row_vertical_padding"
-        android:background="@color/divider_color"
+        android:background="?attr/rowDividerColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/depth_marker"
         app:layout_constraintStart_toStartOf="@id/depth_marker"
