--- a/app/src/main/res/layouts/details/layout/discussion.xml
+++ b/app/src/main/res/layouts/details/layout/discussion.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -16,15 +17,29 @@
             android:id="@+id/text_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="?attr/rowBackgroundColor"
             android:paddingBottom="@dimen/row_vertical_padding"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/row_vertical_padding"
+            android:textColor="?attr/rowTextColorPrimary"
             tools:text="Example text"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/comment_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+
+        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
+            android:id="@+id/comments_progress"
+            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/progress_bar_height"
+            android:background="@color/light_theme_color_primary_dark"
+            android:indeterminate="true"
+            app:mpb_progressStyle="horizontal"
+            app:mpb_useIntrinsicPadding="false"/>
+
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
