--- a/app/src/main/res/layouts/details/layout/webview_bottom_bar.xml
+++ b/app/src/main/res/layouts/details/layout/webview_bottom_bar.xml
@@ -5,7 +5,7 @@
     android:layout_height="?android:attr/actionBarSize"
     android:id="@+id/webview_bottom_bar"
     android:orientation="horizontal"
-    android:background="@color/colorPrimary"
+    android:background="?attr/colorPrimary"
     android:visibility="invisible"
     android:weightSum="3">
 
