--- a/app/src/main/res/layouts/frontpage/layout/story_item.xml
+++ b/app/src/main/res/layouts/frontpage/layout/story_item.xml
@@ -5,19 +5,17 @@
     android:id="@+id/story_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="?attr/rowBackgroundColor"
     android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/row_vertical_padding"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/row_vertical_padding">
-
-        <!-- TODO- move a lot of this to styles.xml for reuseability -->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,16 +28,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/text_item_separation"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/text_low_priority"
+                android:textColor="?attr/rowTextColorSecondary"
                 android:textSize="16sp"
-                tools:text="111"/>
+                tools:text="123"/>
 
             <TextView
                 android:id="@+id/author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
-                android:textColor="@color/text_low_priority"
+                android:textColor="?attr/rowTextColorSecondary"
                 android:textSize="13sp"
                 tools:text="dhouston"/>
 
@@ -49,8 +47,7 @@
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/title_bottom_margin"
-            android:textColor="@color/text_high_priority"
+            android:textColor="?attr/rowTextColorPrimary"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="My YC app: Dropbox - Throw away your USB drive"/>
@@ -60,33 +57,61 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical">
 
+            <ImageView
+                android:id="@+id/url_drawable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="Link image"
+                android:gravity="center_vertical"
+                android:src="@drawable/ic_link_light_grey_24dp"
+                android:tint="?attr/rowDrawableColor"/>
+
             <TextView
                 android:id="@+id/url"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/text_item_separation"
                 android:layout_marginRight="@dimen/text_item_separation"
-                android:drawableLeft="@drawable/ic_link_light_grey_24dp"
-                android:drawablePadding="4dp"
+                android:layout_toEndOf="@id/url_drawable"
+                android:layout_toRightOf="@id/url_drawable"
                 android:fontFamily="sans-serif-condensed"
                 android:gravity="center_vertical"
-                android:textColor="@color/text_low_priority"
+                android:textColor="?attr/rowTextColorSecondary"
                 android:textSize="13sp"
                 tools:text="(getdropbox.com)"/>
+
+            <ImageView
+                android:id="@+id/time_drawable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/url"
+                android:layout_toRightOf="@id/url"
+                android:contentDescription="Clock image"
+                android:gravity="center_vertical"
+                android:padding="4dp"
+                android:src="@drawable/ic_time_light_grey_24dp"
+                android:tint="?attr/rowDrawableColor"/>
 
             <TextView
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/text_item_separation"
+                android:layout_marginLeft="@dimen/text_item_separation"
                 android:layout_marginRight="@dimen/text_item_separation"
-                android:layout_toRightOf="@id/url"
-                android:drawableLeft="@drawable/ic_time_light_grey_24dp"
-                android:drawablePadding="4dp"
+                android:layout_toEndOf="@id/time_drawable"
+                android:layout_toLeftOf="@id/comments"
+                android:layout_toRightOf="@id/time_drawable"
+                android:layout_toStartOf="@id/comments"
                 android:fontFamily="sans-serif-condensed"
                 android:gravity="center_vertical"
-                android:textColor="@color/text_low_priority"
+                android:textColor="?attr/rowTextColorSecondary"
                 android:textSize="13sp"
                 tools:text="1hr"/>
 
@@ -94,16 +119,18 @@
                 android:id="@+id/comments"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:background="?android:attr/selectableItemBackground"
                 android:clickable="true"
                 android:drawableLeft="@drawable/ic_comment_gold_24dp"
                 android:drawablePadding="4dp"
+                android:drawableStart="@drawable/ic_comment_gold_24dp"
                 android:focusable="true"
                 android:fontFamily="sans-serif"
                 android:gravity="center_vertical"
-                android:textColor="@color/colorPrimary"
+                android:textColor="?attr/colorPrimary"
                 android:textSize="13sp"
                 tools:text="72"/>
         </RelativeLayout>
@@ -113,5 +140,5 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider_size"
         android:layout_gravity="bottom"
-        android:background="@color/divider_color"/>
+        android:background="?attr/rowDividerColor"/>
 </LinearLayout>
