--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,9 +10,14 @@
     <dimen name="row_vertical_padding">8dp</dimen>
     <dimen name="row_horizontal_padding">16dp</dimen>
     <dimen name="text_item_separation">8dp</dimen>
-    <dimen name="title_bottom_margin">2dp</dimen>
 
     <dimen name="depth_marker_width">4dp</dimen>
 
     <dimen name="divider_size">1px</dimen>
+
+    <dimen name="webview_bottom_bar_drawable_size">32dp</dimen>
+    <dimen name="webview_bottom_bar_drawable_spacing">16dp</dimen>
+    <dimen name="progress_bar_height">4dp</dimen>
+    <dimen name="collapsed_comment_counter_corner_radius">4dp</dimen>
+    <dimen name="collapsed_comment_counter_padding">4dp</dimen>
 </resources>
