Added a "mock" build variant to run app with faked data. Uses a simple depency injection system (I think? it's the same thing the Google testing codelab uses- Injection.java). Should allow for satisfactory UI testing to be added now. Added to unit tests to test all Presenters now. Will review other apps Added unit tests for basic utils. Still working on getting the "link" system in comments usable.

--- a/app/src/main/res/layouts/details/layout/comment_item.xml
+++ b/app/src/main/res/layouts/details/layout/comment_item.xml
@@ -62,7 +62,7 @@
         tools:text="6"
         tools:visibility="visible"/>
 
-    <TextView
+    <io.github.httpmattpvaughn.hnapp.views.MyTextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -73,6 +73,7 @@
         android:paddingTop="@dimen/row_vertical_padding"
         android:textColor="?attr/rowTextColorPrimary"
         android:textSize="13sp"
+        android:textIsSelectable="true"
         app:layout_constraintStart_toEndOf="@id/depth_marker"
         app:layout_constraintTop_toBottomOf="@+id/author"
         tools:text="Text comment please ignore. Text comment please ignore. Text comment please ignore. Text comment please ignore. Text comment please ignore. Text comment please ignore. "/>
