--- a/app/src/main/res/layouts/frontpage/layout/story_item.xml
+++ b/app/src/main/res/layouts/frontpage/layout/story_item.xml
@@ -1,144 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/story_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/rowBackgroundColor"
-    android:orientation="vertical">
+    android:background="?attr/rowBackgroundColor">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/row_vertical_padding"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/row_vertical_padding">
+        android:layout_marginLeft="@dimen/row_horizontal_padding"
+        android:layout_marginTop="@dimen/row_vertical_padding"
+        android:fontFamily="sans-serif"
+        android:textColor="?attr/rowTextColorSecondary"
+        android:textSize="16sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="123"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/text_item_separation"
+        android:fontFamily="sans-serif"
+        android:textColor="?attr/rowTextColorSecondary"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@id/score"
+        app:layout_constraintLeft_toRightOf="@id/score"
+        tools:text="dhouston"/>
 
-            <TextView
-                android:id="@+id/score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/text_item_separation"
-                android:fontFamily="sans-serif"
-                android:textColor="?attr/rowTextColorSecondary"
-                android:textSize="16sp"
-                tools:text="123"/>
 
-            <TextView
-                android:id="@+id/author"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif"
-                android:textColor="?attr/rowTextColorSecondary"
-                android:textSize="13sp"
-                tools:text="dhouston"/>
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/row_horizontal_padding"
+        android:layout_marginRight="@dimen/row_horizontal_padding"
+        android:textColor="?attr/rowTextColorPrimary"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/score"
+        tools:text="My YC app: Dropbox - Throw away your USB drive"/>
 
-        </LinearLayout>
+    <ImageView
+        android:id="@+id/url_drawable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/row_horizontal_padding"
+        android:contentDescription="@string/url_link"
+        android:src="@drawable/ic_link_light_grey_24dp"
+        android:tint="?attr/rowDrawableColor"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"/>
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="?attr/rowTextColorPrimary"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            tools:text="My YC app: Dropbox - Throw away your USB drive"/>
+    <TextView
+        android:id="@+id/url"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/text_item_separation_small"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="?attr/rowTextColorSecondary"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@id/url_drawable"
+        app:layout_constraintLeft_toRightOf="@id/url_drawable"
+        app:layout_constraintTop_toTopOf="@id/url_drawable"
+        tools:text="(getdropbox.com)"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical">
+    <ImageView
+        android:id="@+id/time_drawable"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/text_item_separation"
+        android:contentDescription="@string/time_icon"
+        android:padding="4dp"
+        android:src="@drawable/ic_time_light_grey_24dp"
+        android:tint="?attr/rowDrawableColor"
+        app:layout_constraintBottom_toBottomOf="@id/url_drawable"
+        app:layout_constraintLeft_toRightOf="@id/url"
+        app:layout_constraintTop_toTopOf="@id/url_drawable"/>
 
-            <ImageView
-                android:id="@+id/url_drawable"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:contentDescription="Link image"
-                android:gravity="center_vertical"
-                android:src="@drawable/ic_link_light_grey_24dp"
-                android:tint="?attr/rowDrawableColor"/>
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/text_item_separation_small"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="?attr/rowTextColorSecondary"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@id/url_drawable"
+        app:layout_constraintLeft_toRightOf="@id/time_drawable"
+        app:layout_constraintTop_toTopOf="@id/url_drawable"
+        tools:text="1hr"/>
 
-            <TextView
-                android:id="@+id/url"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/text_item_separation"
-                android:layout_marginRight="@dimen/text_item_separation"
-                android:layout_toEndOf="@id/url_drawable"
-                android:layout_toRightOf="@id/url_drawable"
-                android:fontFamily="sans-serif-condensed"
-                android:gravity="center_vertical"
-                android:textColor="?attr/rowTextColorSecondary"
-                android:textSize="13sp"
-                tools:text="(getdropbox.com)"/>
-
-            <ImageView
-                android:id="@+id/time_drawable"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/url"
-                android:layout_toRightOf="@id/url"
-                android:contentDescription="Clock image"
-                android:gravity="center_vertical"
-                android:padding="4dp"
-                android:src="@drawable/ic_time_light_grey_24dp"
-                android:tint="?attr/rowDrawableColor"/>
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/text_item_separation"
-                android:layout_marginLeft="@dimen/text_item_separation"
-                android:layout_marginRight="@dimen/text_item_separation"
-                android:layout_toEndOf="@id/time_drawable"
-                android:layout_toLeftOf="@id/comments"
-                android:layout_toRightOf="@id/time_drawable"
-                android:layout_toStartOf="@id/comments"
-                android:fontFamily="sans-serif-condensed"
-                android:gravity="center_vertical"
-                android:textColor="?attr/rowTextColorSecondary"
-                android:textSize="13sp"
-                tools:text="1hr"/>
-
-            <TextView
-                android:id="@+id/comments"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="?android:attr/selectableItemBackground"
-                android:clickable="true"
-                android:drawableLeft="@drawable/ic_comment_gold_24dp"
-                android:drawablePadding="4dp"
-                android:drawableStart="@drawable/ic_comment_gold_24dp"
-                android:focusable="true"
-                android:fontFamily="sans-serif"
-                android:gravity="center_vertical"
-                android:textColor="?attr/colorPrimary"
-                android:textSize="13sp"
-                tools:text="72"/>
-        </RelativeLayout>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/comments"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/row_horizontal_padding"
+        android:clickable="true"
+        android:drawableLeft="@drawable/ic_comment_gold_24dp"
+        android:drawablePadding="4dp"
+        android:drawableStart="@drawable/ic_comment_gold_24dp"
+        android:focusable="true"
+        android:fontFamily="sans-serif"
+        android:padding="8dp"
+        android:textColor="?attr/colorPrimary"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@id/url_drawable"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/url_drawable"
+        tools:text="72"/>
 
     <View
+        android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider_size"
-        android:layout_gravity="bottom"
-        android:background="?attr/rowDividerColor"/>
-</LinearLayout>
+        android:layout_marginTop="@dimen/row_vertical_padding"
+        android:background="?attr/rowDividerColor"
+        app:layout_constraintTop_toBottomOf="@id/url_drawable"/>
+</android.support.constraint.ConstraintLayout>
