--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="row_vertical_padding">8dp</dimen>
     <dimen name="row_horizontal_padding">16dp</dimen>
     <dimen name="text_item_separation">8dp</dimen>
+    <dimen name="text_item_separation_small">4dp</dimen>
 
     <dimen name="depth_marker_width">4dp</dimen>
 
