--- a/app/src/main/res/layouts/frontpage/layout/story_item_dense.xml
+++ b/app/src/main/res/layouts/frontpage/layout/story_item_dense.xml
@@ -12,11 +12,11 @@
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/row_horizontal_padding"
-        android:layout_marginTop="@dimen/row_vertical_padding"
+        android:layout_marginLeft="@dimen/dense_row_horizontal_padding"
+        android:layout_marginTop="@dimen/dense_row_vertical_padding"
         android:fontFamily="sans-serif"
         android:textColor="?attr/rowTextColorSecondary"
-        android:textSize="16sp"
+        android:textSize="@dimen/dense_title_size"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="123"/>
@@ -25,7 +25,7 @@
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/text_item_separation"
+        android:layout_marginLeft="@dimen/dense_text_item_separation"
         android:fontFamily="sans-serif"
         android:textColor="?attr/rowTextColorSecondary"
         android:textSize="13sp"
@@ -33,16 +33,16 @@
         app:layout_constraintLeft_toRightOf="@id/score"
         tools:text="dhouston"/>
 
-
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/row_horizontal_padding"
-        android:layout_marginRight="@dimen/row_horizontal_padding"
+        android:layout_marginLeft="@dimen/dense_row_horizontal_padding"
+        android:layout_marginRight="@dimen/dense_row_horizontal_padding"
         android:textColor="?attr/rowTextColorPrimary"
-        android:textSize="@dimen/title_size"
+        android:textSize="@dimen/dense_title_size"
         android:textStyle="bold"
+        android:lineSpacingMultiplier="0.9"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/score"
@@ -52,7 +52,7 @@
         android:id="@+id/url_drawable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/row_horizontal_padding"
+        android:layout_marginLeft="@dimen/dense_row_horizontal_padding"
         android:contentDescription="@string/url_link"
         android:src="@drawable/ic_link_light_grey_24dp"
         android:tint="?attr/rowDrawableColor"
@@ -63,7 +63,7 @@
         android:id="@+id/url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/text_item_separation_small"
+        android:layout_marginLeft="@dimen/dense_text_item_separation_small"
         android:fontFamily="sans-serif-condensed"
         android:textColor="?attr/rowTextColorSecondary"
         android:textSize="13sp"
@@ -76,7 +76,7 @@
         android:id="@+id/time_drawable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/text_item_separation"
+        android:layout_marginLeft="@dimen/dense_text_item_separation"
         android:contentDescription="@string/time_icon"
         android:padding="4dp"
         android:src="@drawable/ic_time_light_grey_24dp"
@@ -89,7 +89,7 @@
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/text_item_separation_small"
+        android:layout_marginLeft="@dimen/dense_text_item_separation_small"
         android:fontFamily="sans-serif-condensed"
         android:textColor="?attr/rowTextColorSecondary"
         android:textSize="13sp"
@@ -102,7 +102,7 @@
         android:id="@+id/comments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="@dimen/row_horizontal_padding"
+        android:layout_marginRight="@dimen/dense_row_horizontal_padding"
         android:clickable="true"
         android:drawableLeft="@drawable/ic_comment_gold_24dp"
         android:drawablePadding="4dp"
@@ -121,7 +121,7 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider_size"
-        android:layout_marginTop="@dimen/row_vertical_padding"
+        android:layout_marginTop="@dimen/dense_row_vertical_padding"
         android:background="?attr/rowDividerColor"
         app:layout_constraintTop_toBottomOf="@id/url_drawable"/>
 </android.support.constraint.ConstraintLayout>
